Added authorization message for photo library and adjusted implementation of preview layer and outline layer to draw detected rectangles more accurately.

--- a/Credit Card Scanner/Support/Info.plist
+++ b/Credit Card Scanner/Support/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This application needs access to the photo library to save photos of items detected.</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
